--- a/index.html
+++ b/index.html
@@ -14,35 +14,42 @@
     />
   </head>
   <body>
-    <div class="container">
-      <img
-        class="blog-image"
-        src="/assets/images/illustration-article.svg"
-        alt="illustration-article"
-      />
-      <div class="label">Learning</div>
+    <main>
+      <div class="container">
+        <img
+          class="blog-image"
+          src="/assets/images/illustration-article.svg"
+          alt="illustration-article"
+        />
+        <div class="label">Learning</div>
 
-      <p class="publish-date">Published 21 Dec 2024</p>
+        <p class="publish-date">Published 21 Dec 2024</p>
 
-      <h3>HTML & CSS foundations</h3>
+        <h3>HTML & CSS foundations</h3>
 
-      <p>
-        These languages are the backbone of every website, defining structure,
-        content, and presentation.
-      </p>
-      <div class="author">
-        <img class="author-image" src="/assets/images/image-avatar.webp" alt="">
-        Greg Hooper
+        <p>
+          These languages are the backbone of every website, defining structure,
+          content, and presentation.
+        </p>
+        <div class="author">
+          <img
+            class="author-image"
+            src="/assets/images/image-avatar.webp"
+            alt=""
+          />
+          Greg Hooper
+        </div>
       </div>
-    </div>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by
-      <a href="https://www.frontendmentor.io/profile/Vinnykells15">Vinnykells</a
-      >.
-    </div>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://www.frontendmentor.io/profile/Vinnykells15"
+          >Vinnykells</a
+        >.
+      </div>
+    </main>
   </body>
 </html>
